# autodeploy

./: .gitignore  Cargo.toml  README.md  autodeploy.example.toml  config.example.toml
src/: args.rs  config.rs  github.rs  http.rs  main.rs  repo.rs
src/http/: access.rs  errors.rs  handlers.rs  mod.rs
src/processor/: config.rs  message.rs  mod.rs  worker.rs
