[package]
name = "autodeploy"
version = "0.1.0"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
