[package]
name = "autodeploy"
version = "0.1.0"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

# Error handling
anyhow = "1.0"

# Webserver
bytes = "1.0"
hex = "0.4.3"
ring = { version = "0.16.20", default-features = false, features = ["std"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
warp = { version = "0.3.1", default-features = false }
